Added atmosphere and refactoring

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-    <script type="module" src="./Scripts/main.js"></script>
+    <script type="module" src="./main.js"></script>
 </head>
 <body>
 </body>
@@ -9,6 +9,7 @@
 body {
     margin: 0;
     padding: 0;
+    overflow: hidden;
     background-color: black;
 }
 
