--- a/src/index.html
+++ b/src/index.html
@@ -1,16 +1,9 @@
 <!DOCTYPE html>
 <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link href="style.css" rel="stylesheet" />
     <script type="module" src="./main.js"></script>
 </head>
 <body>
 </body>
-<style>
-
-body {
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: black;
-}
-
-</style>
